WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166887
Followup fix after
r210503
.
https://bugs.webkit.org/show_bug.cgi?id=166887
Summary
Followup fix after r210503.
Per Arne Vollan
Reported
2017-01-10 04:58:02 PST
After <
http://trac.webkit.org/changeset/210503
>, test results are written to a duplicated file handle on Windows. I forgot to update a couple of call sites in the original patch.
Attachments
Patch
(3.43 KB, patch)
2017-01-10 05:11 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(4.99 KB, patch)
2017-01-11 06:22 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-01-10 05:11:09 PST
Created
attachment 298458
[details]
Patch
Brent Fulgham
Comment 2
2017-01-10 13:54:07 PST
Comment on
attachment 298458
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=298458&action=review
> Tools/DumpRenderTree/DumpRenderTree.h:51 > +#endif
Should this be in TestRunner.h instead, since it seems like it's mostly used in TestRunner.cpp/TestRunnerWin.cpp?
Per Arne Vollan
Comment 3
2017-01-11 06:22:50 PST
Created
attachment 298575
[details]
Patch
Per Arne Vollan
Comment 4
2017-01-11 10:00:06 PST
(In reply to
comment #2
)
> Comment on
attachment 298458
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=298458&action=review
> > > Tools/DumpRenderTree/DumpRenderTree.h:51 > > +#endif > > Should this be in TestRunner.h instead, since it seems like it's mostly used > in TestRunner.cpp/TestRunnerWin.cpp?
Thanks for reviewing! I have updated the patch.
WebKit Commit Bot
Comment 5
2017-01-12 01:23:49 PST
Comment on
attachment 298575
[details]
Patch Clearing flags on attachment: 298575 Committed
r210628
: <
http://trac.webkit.org/changeset/210628
>
WebKit Commit Bot
Comment 6
2017-01-12 01:23:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug