Followup fix after r210503. https://bugs.webkit.org/show_bug.cgi?id=166887

Reviewed by Alex Christensen.

After <http://trac.webkit.org/changeset/210503>, test results are written to a
duplicated file handle on Windows. This patch fixes the remaining call sites.

* DumpRenderTree/PixelDumpSupport.cpp:
* DumpRenderTree/TestRunner.cpp:
(TestRunner::waitToDumpWatchdogTimerFired):
* DumpRenderTree/TestRunner.h:
* DumpRenderTree/win/AccessibilityControllerWin.cpp:
* DumpRenderTree/win/DumpRenderTree.cpp:
* DumpRenderTree/win/DumpRenderTreeWin.h:
* DumpRenderTree/win/TestRunnerWin.cpp:
(TestRunner::setSpellCheckerLoggingEnabled):


Canonical link: https://commits.webkit.org/184068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210628 268f45cc-cd09-0410-ab3c-d52691b4dbfc