Tools/DumpRenderTree/win/DumpRenderTree.cpp
@@ -123,8 +123,6 @@ RefPtr<TestRunner> gTestRunner;
 
 UINT_PTR waitToDumpWatchdog = 0;
 
-FILE* testResult = nullptr;
-
 void setPersistentUserStyleSheetLocation(CFStringRef url)
 {
     persistentUserStyleSheetLocation = url;
