Tools/DumpRenderTree/win/DumpRenderTreeWin.h
@@ -43,8 +43,6 @@ extern PolicyDelegate* policyDelegate;
 
 extern HWND webViewWindow;
 
-extern FILE* testResult;
-
 #include <WebCore/COMPtr.h>
 #include <string>
 #include <wtf/HashMap.h>
